package modele;

import java.util.ArrayList;
import java.util.Date;
import java.util.List;

public class TachePrimaire extends Tache {
    private Date dateDebut;
    private Date dateEcheance;
    private boolean archivee;
    private int etat;

    public static final int EN_COURS=1;
    public static final int TERMINEE=2;
    public static final int A_FAIRE=3;
    public static final int EN_ATTENTE=4;

    //Partie composite
    private List<Tache> dependances;

    public TachePrimaire(String nom, String description, int duree, Date dateDebut, Date dateEcheance) throws Exception{
        super(nom, description, duree);
        this.dateDebut = dateDebut;
        this.dateEcheance = dateEcheance;
        this.archivee = false;
        this.dependances = new ArrayList<Tache>();
    }

    public void ajoutDependance(Tache tache) {
        this.dependances.add(tache);
    }
    /**
     * recupere la date de debut de la tâche
     * @return dateDebut
     */
    public Date getDateDebut() {
        return dateDebut;
    }

    /**
     * recupere la date de fin de la tâche
     * @return dateEcheance
     */
    public Date getDateEcheance() {
        return dateEcheance;
    }

    public List<Tache> getDependances() {
        return dependances;
    }

    /**
     * retourne vrai si la tache est archivée
     * @return archivee
     */
    public boolean isArchivee() {
        return archivee;
    }

    public String toString(){
        return this.toString(0);
    }

    @Override
    public String toString(int indent) {
        String res = super.toString(indent);

        if(!this.dependances.isEmpty()){
            res+= "\t".repeat(indent) + "Dépendances : " + '\n';
        }

        for (Tache t : dependances) {
            res += t.toString(indent + 1);
        }

        return res;
    }

    public void setEtat(int etat) throws Exception {
        if (etat > 4 && etat < 1) {
            throw new Exception("Etat invalide");
        } else {
            this.etat = etat;
        }
    }
}
