@startuml

title Diagramme de classe global - TouDou

    class FabriqueTache {
        + creerTache(nom, description, duree, dateDebut) : Tache
        + creerSousTache(nom, description, duree) : Tache
    }

    class Tache implements Serializable{
        - nom : String
        - description : String
        - duree : int
        - serialVersionUID : long

        + getNom(): String
        + getDescription(): String
        + getDuree(): int
        + toString(int): String
        + toString(): String
    }

    class SousTache extends Tache{
    }

    class TachePrimaire extends Tache{
        - dateDebut : Date
        - dateEcheance : Date
        - archivee : boolean
        - dependances : List<Tache>

        + ajoutDependance(Tache): void
        + getDateDebut(): Date
        + getDateEcheance(): Date
        + getDependances(): List<Tache>
        + isArchivee(): boolean
        + toString(): String
        + toString(int): String
    }

    package Singleton {
        class TacheSerializer{
            - chemin : String
            - instance : TacheSerializer

            + ecrireFichier(List<Tache>); void
            + lireFichier(): List<Tache>
        }
    }

    interface Manager{
        + {abstract} create(Tache): void
        + {abstract} read(int): Tache
        + {abstract} readAll(): List<Tache>
        + {abstract} update(int, String, String, int): boolean
        + {abstract} delete(int): boolean
    }

    class TacheManager implements Manager{
        - List<Tache>
        - sauvegarder(): void
        + create(Tache): void
        + read(int): Tache
        + readAll(): List<Tache>
        + update(int, String, String, int): boolean
        + delete(int): boolean
    }

    FabriqueTache ..> Tache : create
    TacheSerializer ..> Tache : use
    TacheManager .> TacheSerializer : use


@enduml